Atelier 3 Alissent et Karla

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -4,29 +4,233 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple Hello World"
+    "## Étape 1 - Validation d'une saisie"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Hello World !"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Veuillez saisir un nombre entre 2 et 15 : \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saisie validée : 8\n"
+     ]
     }
    ],
    "source": [
-    "String message = \"Hello\";\n",
+    "import java.util.Scanner;\n",
     "\n",
-    "message + \" World !\""
+    "// Préparation de l'outil pour lire le clavier\n",
+    "Scanner clavier = new Scanner(System.in);\n",
+    "int nombre;\n",
+    "\n",
+    "// La boucle commence ici\n",
+    "do {\n",
+    "    System.out.println(\"Veuillez saisir un nombre entre 2 et 15 : \");\n",
+    "    // On attend que l'utilisateur tape un nombre\n",
+    "    nombre = clavier.nextInt();\n",
+    "\n",
+    "    // Si le nombre n'est pas valide, on affiche le message d'erreur\n",
+    "    if (nombre < 2 || nombre > 15) {\n",
+    "        System.out.println(\"Erreur : \" + nombre + \" n'est pas valide.\");\n",
+    "    }\n",
+    "\n",
+    "} while (nombre < 2 || nombre > 15); // On recommence TANT QUE c'est invalide\n",
+    "\n",
+    "// Si on sort de la boucle, c'est que c'est gagné\n",
+    "System.out.println(\"Saisie validée : \" + nombre);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Étape 2 - Dessin de ligne(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Voulez-vous un carré creux ? (oui/non) : "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * * * * \n",
+      "* * * * * * * * \n",
+      "* * * * * * * * \n",
+      "* * * * * * * * \n",
+      "* * * * * * * * \n",
+      "* * * * * * * * \n",
+      "* * * * * * * * \n",
+      "* * * * * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "// Étape 2 : Carré creux ou plein\n",
+    "System.out.print(\"Voulez-vous un carré creux ? (oui/non) : \");\n",
+    "String choix = clavier.next();\n",
+    "\n",
+    "for (int i = 0; i < nombre; i++) {\n",
+    "    for (int j = 0; j < nombre; j++) {\n",
+    "        // Si première/dernière ligne OU première/dernière colonne\n",
+    "        if (choix.equals(\"oui\") && i > 0 && i < nombre - 1 && j > 0 && j < nombre - 1) {\n",
+    "            System.out.print(\"  \"); // Espace vide au milieu\n",
+    "        } else {\n",
+    "            System.out.print(\"* \");\n",
+    "        }\n",
+    "    }\n",
+    "    System.out.println();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Étape 3 - Dessin de triangle(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Veuillez saisir un nombre entre 2 et 15 : \n",
+      "Saisie validée : 6\n",
+      "\n",
+      "     *\n",
+      "    ***\n",
+      "   *****\n",
+      "  *******\n",
+      " *********\n",
+      "***********\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Scanner;\n",
+    "\n",
+    "Scanner clavier = new Scanner(System.in);\n",
+    "int nombre;\n",
+    "\n",
+    "// Étape 1 : Validation\n",
+    "do {\n",
+    "    System.out.println(\"Veuillez saisir un nombre entre 2 et 15 : \");\n",
+    "    nombre = clavier.nextInt();\n",
+    "    \n",
+    "    if (nombre < 2 || nombre > 15) {\n",
+    "        System.out.println(\"Erreur : \" + nombre + \" n'est pas valide.\");\n",
+    "    }\n",
+    "} while (nombre < 2 || nombre > 15);\n",
+    "\n",
+    "System.out.println(\"Saisie validée : \" + nombre);\n",
+    "System.out.println();\n",
+    "\n",
+    "\n",
+    "// Étape 2 : Sapin\n",
+    "for (int i = 1; i <= nombre; i++) {\n",
+    "    for (int j = 0; j < nombre - i; j++) {\n",
+    "        System.out.print(\" \");\n",
+    "    }\n",
+    "    for (int j = 0; j < (2 * i - 1); j++) {\n",
+    "        System.out.print(\"*\");\n",
+    "    }\n",
+    "    System.out.println();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Etape 4 : Coeur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " ***   ***\n",
+      "***** *****\n",
+      "***********\n",
+      " *********\n",
+      "  *******\n",
+      "   *****\n",
+      "    ***\n",
+      "     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Coeur dynamique basé sur le nombre saisi\n",
+    "System.out.println();\n",
+    "\n",
+    "int n = nombre;\n",
+    "\n",
+    "// Partie haute du coeur (les deux bosses)\n",
+    "for (int i = n/2; i <= n; i += 2) {\n",
+    "    // Espaces avant\n",
+    "    for (int j = 1; j < n - i; j += 2) {\n",
+    "        System.out.print(\" \");\n",
+    "    }\n",
+    "    // Première bosse\n",
+    "    for (int j = 1; j <= i; j++) {\n",
+    "        System.out.print(\"*\");\n",
+    "    }\n",
+    "    // Espaces au milieu\n",
+    "    for (int j = 1; j <= n - i; j++) {\n",
+    "        System.out.print(\" \");\n",
+    "    }\n",
+    "    // Deuxième bosse\n",
+    "    for (int j = 1; j <= i; j++) {\n",
+    "        System.out.print(\"*\");\n",
+    "    }\n",
+    "    System.out.println();\n",
+    "}\n",
+    "\n",
+    "// Partie basse du coeur (pointe)\n",
+    "for (int i = n; i >= 1; i--) {\n",
+    "    // Espaces avant\n",
+    "    for (int j = i; j < n; j++) {\n",
+    "        System.out.print(\" \");\n",
+    "    }\n",
+    "    // Étoiles\n",
+    "    for (int j = 1; j <= (i * 2) - 1; j++) {\n",
+    "        System.out.print(\"*\");\n",
+    "    }\n",
+    "    System.out.println();\n",
+    "}"
    ]
   }
  ],
@@ -43,7 +247,7 @@
    "name": "java",
    "nbconvert_exporter": "script",
    "pygments_lexer": "java",
-   "version": "21.0.5+11-LTS"
+   "version": "25.0.1+8-LTS"
   }
  },
  "nbformat": 4,
