--- a/hello.ipynb
+++ b/hello.ipynb
@@ -173,14 +173,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       " ***   ***\n",
       "***** *****\n",
       "***********\n",
@@ -193,9 +192,6 @@
     }
    ],
    "source": [
-    "// Coeur dynamique basé sur le nombre saisi\n",
-    "System.out.println();\n",
-    "\n",
     "int n = nombre;\n",
     "\n",
     "// Partie haute du coeur (les deux bosses)\n",
@@ -226,7 +222,9 @@
     "        System.out.print(\" \");\n",
     "    }\n",
     "    // Étoiles\n",
-    "    for (int j = 1; j <= (i * 2) - 1; j++) {\n",
+    "    int largeur = i * 2;\n",
+    "\n",
+    "    for (int j = 1; j < largeur; j++) {\n",
     "        System.out.print(\"*\");\n",
     "    }\n",
     "    System.out.println();\n",
