--- a/hello.ipynb
+++ b/hello.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saisie validée : 8\n"
+      "Saisie validée : 5\n"
      ]
     }
    ],
@@ -60,28 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Voulez-vous un carré creux ? (oui/non) : "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* * * * * * * * \n",
-      "* * * * * * * * \n",
-      "* * * * * * * * \n",
-      "* * * * * * * * \n",
-      "* * * * * * * * \n",
-      "* * * * * * * * \n",
-      "* * * * * * * * \n",
-      "* * * * * * * * \n"
+      "Voulez-vous un carré creux ? (oui/non) : * * * * * \n",
+      "*       * \n",
+      "*       * \n",
+      "*       * \n",
+      "* * * * * \n"
      ]
     }
    ],
@@ -113,14 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Veuillez saisir un nombre entre 2 et 15 : \n",
+      "Veuillez saisir un nombre entre 2 et 15 : \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Saisie validée : 6\n",
       "\n",
       "     *\n",
